# SkyrimNet-GamePlugin

./: .gitignore  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  report.yml
.github/workflows/: cleanup-prereleases.yml
CppAPI/: PCH.h  PublicAPI.h
CppAPI/.buildenv/: CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
CppAPI/src/: Plugin.h  main.cpp  main.quest_journal.cpp  main.temper.cpp
PrismaUI/views/SkyrimNet/chat/: chat.css  chat.js  index.html
SKSE/Plugins/SkyrimNet/chat/: app.js  audience.js  index.html  input.js  messages.js  styles.css  theme.js
SKSE/Plugins/SkyrimNet/original_prompts/characters/: adril_arano_281.prompt  aela_the_huntress_697.prompt  afflicted_3A9.prompt  afflicted_generic.prompt  aganir_balbus_EA3.prompt  agmaer_474.prompt  (+542 more)
SKSE/Plugins/SkyrimNet/original_voice_effects/: dragon_priest.yaml  draugr.yaml  dremora.yaml  ghost.yaml  narrator_reverb.yaml  player_thought_overlay.yaml  vampire_lord.yaml  werewolf.yaml
SKSE/Plugins/SkyrimNet/prompts/: agent_knowledge_builder.prompt  bard_song_lyrics.prompt  dialogue_response.prompt  diary_entry.prompt  dynamic_bio_update.prompt  gamemaster_action_selector.prompt  native_action_selector.prompt  native_action_selector_drilldown.prompt  npc_thoughts.prompt  player_dialogue.prompt  player_thoughts.prompt
Scripts/: SkyrimNetApi.pex  skynet_Library.pex  skynet_MainController.pex  skynet_McmScript.pex  skynet_WheelMenu.pex
Source/Scripts/: RealNamesChange.psc  RealNamesReset.psc  SkyrimNetApi.psc  SkyrimNetInternal.psc  skynet_Library.psc  skynet_MainController.psc  skynet_McmScript.psc  skynet_TelepathyEavesdrop.psc  skynet_TelepathyListenIn.psc  skynet_WheelMenu.psc
docs/: Agents.md
model-presets/: index.yaml  recommended-models.yaml
model-presets/presets/: openrouter-budget.yaml  openrouter-default.yaml  openrouter-performance.yaml
plugins/SkyrimNet/: RecordData.json  spriggit-meta.json
plugins/SkyrimNet/MagicEffects/: skynet_TelepathyEavesdropDebugMagicEffect - 0012DF_SkyrimNet.esp.json  skynet_TelepathyEavesdropMagicEffect - 0012DF_SkyrimNet.esp.json  skynet_TelepathyListenInMagicEffect - 0012E1_SkyrimNet.esp.json
plugins/SkyrimNet/Messages/: skynet_DiaryScopeMessage - 0012DC_SkyrimNet.esp.json
plugins/SkyrimNet/Perks/: SkyrimNet_TelepathyCanonicalPerk - 0012DE_SkyrimNet.esp.json  SkyrimNet_TelepathyPerk - 0012DD_SkyrimNet.esp.json
plugins/SkyrimNet/Quests/: skynet_Mcm - 000D63_SkyrimNet.esp.json
plugins/SkyrimNet/Spells/: skynet_TelepathyEavesdropDebugPower - 0012E0_SkyrimNet.esp.json  skynet_TelepathyEavesdropSpell - 0012E0_SkyrimNet.esp.json  skynet_TelepathyListenInSpell - 0012E2_SkyrimNet.esp.json
skyrimnet/webui/scripts/: gen_prompt_editors.py
utilities/: serialize_gameplugin.ps1
(+38 files in other folders)
